Table "users" {
  "user_id" int4 [pk, not null, increment]
  "first_name" varchar(100) [not null]
  "last_name" varchar(100)
  "email" varchar(255) [not null]
  "birthdate" timestamp
  "username" varchar(100) [not null]
  "password" varchar(100) [not null]
  "role" varchar(50) [default: 'user']
  "verified" bool [not null, default: false]
}

Table "projects" {
  "project_id" int4 [pk, not null, increment]
  "name" varchar(100) [not null]
  "creation_date" timestamp [default: `CURRENT_TIMESTAMP`]
  "description" text
  "created_by" int4
}

Table "teamspaces" {
  "teamspace_id" int4 [pk, not null, increment]
  "name" varchar(100) [not null]
  "creation_date" timestamp [default: `CURRENT_TIMESTAMP`]
  "creator_id" int4 [not null]
  "project_id" int4 [not null]
  "description" text
}

Table "tasks" {
  "task_id" int4 [pk, not null, increment]
  "name" varchar(100) [not null]
  "creation_date" timestamp [default: `CURRENT_TIMESTAMP`]
  "created_by" int4 [not null]
  "status" varchar(50) [not null, default: 'to-do']
  "deadline" timestamp [not null]
  "description" text
}

Table "reset_confirm_tokens" {
  "token" varchar(255) [pk, not null]
  "user_id" int4 [not null]
  "expires_at_utc" timestamp [not null, default: `(CURRENT_TIMESTAMP + '00:30:00'::interval)`]
  "used" bool [not null, default: false]
}

Table "teamspace_members" {
  "teamspace_id" int4 [not null]
  "user_id" int4 [not null]
  "role" varchar(50) [default: 'user']
  "joined_at" timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (teamspace_id, user_id) [type: btree, name: "teamspace_members_pkey"]
  }
}

Table "task_assignees" {
  "task_id" int4 [not null]
  "user_id" int4 [not null]
  "assigned_date" timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (task_id, user_id) [type: btree, name: "task_assignees_pkey"]
  }
}

Table "task_teamspaces" {
  "task_id" int4 [not null]
  "teamspace_id" int4 [not null]
  "added_at" timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (task_id, teamspace_id) [type: btree, name: "task_teamspaces_pkey"]
  }
}

Table "chat_messages" {
  "message_id" int4 [pk, not null, increment]
  "teamspace_id" int4 [not null]
  "sender_id" int4 [not null]
  "message" text [not null]
  "timestamp" timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref "fk_chat_messages_sender":"users"."user_id" < "chat_messages"."sender_id"

Ref "fk_chat_messages_teamspace":"teamspaces"."teamspace_id" < "chat_messages"."teamspace_id"

Ref "projects_created_by_fkey":"users"."user_id" < "projects"."created_by" [delete: cascade]

Ref "reset_confirm_tokens_user_id_fkey":"users"."user_id" < "reset_confirm_tokens"."user_id" [update: cascade, delete: cascade]

Ref "fk_task_assignees_task":"tasks"."task_id" < "task_assignees"."task_id" [update: cascade, delete: cascade]

Ref "fk_task_assignees_user":"users"."user_id" < "task_assignees"."user_id" [update: cascade, delete: cascade]

Ref "fk_task_teamspaces_task":"tasks"."task_id" < "task_teamspaces"."task_id" [update: cascade, delete: cascade]

Ref "fk_task_teamspaces_teamspace":"teamspaces"."teamspace_id" < "task_teamspaces"."teamspace_id" [update: cascade, delete: cascade]

Ref "fk_tasks_created_by":"users"."user_id" < "tasks"."created_by" [update: cascade, delete: cascade]

Ref "fk_teamspace_members_teamspace":"teamspaces"."teamspace_id" < "teamspace_members"."teamspace_id" [update: cascade, delete: cascade]

Ref "fk_teamspace_members_user":"users"."user_id" < "teamspace_members"."user_id" [update: cascade, delete: cascade]

Ref "fk_teamspaces_creator":"users"."user_id" < "teamspaces"."creator_id" [update: cascade, delete: cascade]

Ref "fk_teamspaces_project":"projects"."project_id" < "teamspaces"."project_id" [update: cascade, delete: cascade]
